--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="app.js" defer></script>
   <title>Landing Page Demo</title>
 </head>
 <body>
-  <header class="header">HEADER</header>
+  <header class="header">
+    <div class="topbar">
+      <h1 class="logo">LOGO</h1>
+      <ul class="topbar-list">
+        <li class="topbar-item"><a href="#">HOME</a></li>
+        <p>•</p>
+        <li class="topbar-item topbar-active"><a href="#">QUI SOMMES-NOUS</a></li>
+        <p>•</p>
+        <li class="topbar-item"><a href="#">PRIX</a></li>
+        <p>•</p>
+        <li class="topbar-item"><a href="#">LOCALISATION</a></li>
+      </ul>
+    </div>
+  </header>
   <main class="main">MAIN CONTAINER</main>
   <footer class="footer">FOOTER</footer>
 </body>
