hero banner in progress

--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
       </ul>
     </div>
   </header>
-  <main class="main">MAIN CONTAINER</main>
-  <footer class="footer">FOOTER</footer>
+  <main class="main">
+    <div class="hero-banner">
+      <h1 class="hero-title">
+        <span class="hero-span">P</span>RO 
+        <span class="hero-span">A</span>NIMATION 
+        <span class="hero-span">&</span>
+        <span class="hero-span">E</span>VENEMENTIEL.
+      </h1>
+      <h3 class="hero-para-1">P A & E</h3>
+      <h3 class="hero-para-2">Le prestataire de vos soirées</h3>
+      <div class="hero-buttons">
+        <a href="#" class="price">NOS TARIFS</a>
+        <a href="#" class="localisation">NOUS TROUVER</a>
+      </div>
+      <div class="hero-animation">
+        <img src="./images/cloud1-copy.png" class="hero-img-1" alt="cloud">
+        <img src="./images/cloud2-copy.png" class="hero-img-2" alt="cloud">
+        <img src="./images/cloud3-copy.png" class="hero-img-3" alt="cloud">
+      </div>
+    </div>
+  </main>
+  <footer class="footer"></footer>
 </body>
 </html>
