finalize cloud animation + end hero banner

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <img src="./images/cloud1-copy.png" class="hero-img-1" alt="cloud">
         <img src="./images/cloud2-copy.png" class="hero-img-2" alt="cloud">
         <img src="./images/cloud3-copy.png" class="hero-img-3" alt="cloud">
+        <img src="./images/cloud4-copy.png" class="hero-img-4" alt="cloud">
       </div>
     </div>
   </main>
