minor adjustement hero banner

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="topbar">
-      <h1 class="logo">LOGO</h1>
+      <h1 class="logo"><a href="/">P A & E</a></h1>
       <ul class="topbar-list">
         <li class="topbar-item"><a href="#">HOME</a></li>
         <p>•</p>
