starting about us section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul class="topbar-list">
         <li class="topbar-item"><a href="#">HOME</a></li>
         <p>•</p>
-        <li class="topbar-item topbar-active"><a href="#">QUI SOMMES-NOUS</a></li>
+        <li class="topbar-item topbar-active"><a href="#about-us">QUI SOMMES-NOUS</a></li>
         <p>•</p>
         <li class="topbar-item"><a href="#">PRIX</a></li>
         <p>•</p>
@@ -43,6 +43,20 @@
         <img src="./images/cloud2-copy.png" class="hero-img-2" alt="cloud">
         <img src="./images/cloud3-copy.png" class="hero-img-3" alt="cloud">
         <img src="./images/cloud4-copy.png" class="hero-img-4" alt="cloud">
+      </div>
+    </div>
+    <div id="about-us" class="about-us">
+      <img class="about-img" src="https://images.pexels.com/photos/2470088/pexels-photo-2470088.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="club">
+      <div class="about-para">
+        <p>Vous recherchez une animation musicale de qualité originale, 
+          un bon  Dj pour votre soirée. vous voulez marquer les esprits avec un bon animateur micro ? 
+          ou pourquoi pas  un musicien solo, ou un groupe pour votre cocktail.
+        </p>
+        <p>
+          Pour vos animations de soirées, confiez nous votre événement.  
+          Nous vous proposerons des concepts exclusifs et innovants. 
+          Avec un seul objectif ,marquer les esprits.
+        </p>
       </div>
     </div>
   </main>
