about section done

--- a/index.html
+++ b/index.html
@@ -48,14 +48,46 @@
     <div id="about-us" class="about-us">
       <img class="about-img" src="https://images.pexels.com/photos/2470088/pexels-photo-2470088.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="club">
       <div class="about-para">
-        <p>Vous recherchez une animation musicale de qualité originale, 
-          un bon  Dj pour votre soirée. vous voulez marquer les esprits avec un bon animateur micro ? 
-          ou pourquoi pas  un musicien solo, ou un groupe pour votre cocktail.
+        <p><span style="font-weight: bold;">P A & E</span> c’est votre prestataire pour votre événement d’entreprise, 
+          une convention d’entreprise, une animation musicale de soirée d’entreprise, 
+          un cocktail after-work, une opération promotionnelle, 
+          une inauguration de concession automobile, ou vous recherchez un bon Dj pour votre lancement de produit, 
+          un duo Dj /musicien pour votre événement, une simple location de micro pour votre journée porte ouverte, 
         </p>
         <p>
+          un animateur micro pour votre animation commerciale, l’anniversaire de votre concession automobile, 
+          de la mise en lumière sur votre stand pour votre salon professionnel, 
+          ou simplement de la location de sonorisation et d’éclairage.
+        </p>
+      </div>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <h3>Animation Musicales</h3>
+        <p>
+          Pas de soirée sans musique et, surtout pas de bonnes soirées sans un bon DJ. 
+          <span style="font-weight: bold;">P A & E</span> dispose une équipe de disc-jockeys formés pour vous faire passer une surper soirée. 
+          Open forma ou spécialisés nos Dj’s sauront parfaitement s’adapter à vos demandes.
+        </p>
+      </div>
+      <div class="card">
+        <h3>Animation Micro</h3>
+        <p>
+          Vous recherchez une animation musicale de qualité originale, 
+          un bon  Dj pour votre soirée. vous voulez marquer les esprits avec un bon animateur micro ? 
+          ou pourquoi pas  un musicien solo, ou un groupe pour votre cocktail.
           Pour vos animations de soirées, confiez nous votre événement.  
           Nous vous proposerons des concepts exclusifs et innovants. 
           Avec un seul objectif ,marquer les esprits.
+        </p>
+      </div>
+      <div class="card">
+        <h3>Concept d'animation</h3>
+        <p><span style="font-weight: bold;">P A & E</span> vous propose un service de location de matériel en ligne , 
+          avec livraison ou en retrait magasin. Location de matériel de sonorisation,  
+          location de micro, de podium scène,  ou de vidéoprojecteur. Des prix justes, 
+          un service efficace et  des conseils pour réussir votre événement,  
+          la location de matériel audio-visuel , c’est avec <span style="font-weight: bold;">P A & E</span>.
         </p>
       </div>
     </div>
