end about us section, starting price section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>•</p>
         <li class="topbar-item topbar-active"><a href="#about-us">QUI SOMMES-NOUS</a></li>
         <p>•</p>
-        <li class="topbar-item"><a href="#">PRIX</a></li>
+        <li class="topbar-item"><a href="#prices">PRIX</a></li>
         <p>•</p>
         <li class="topbar-item"><a href="#">LOCALISATION</a></li>
       </ul>
@@ -91,6 +91,15 @@
           la location de matériel audio-visuel , c’est avec <span style="font-weight: bold;">P A & E</span>.
         </p>
       </div>
+    </div>
+    <div class="wedding-pic">
+      <div class="wedding-quotes">
+        <h2>Depuis 2007, P A & E c’est + de 2800 animations réalisées …</h2>
+        <h4>Dj party, animation musicale d’événement, animation micro commerciale, speaker sportif...</h4>
+      </div>
+    </div>
+    <div id="prices">
+      <h2>Prices</h2>
     </div>
   </main>
   <footer class="footer"></footer>
