price section + footer section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </h1>
       <h3 class="hero-para-2">Le prestataire de vos soirées</h3>
       <div class="hero-buttons">
-        <a href="#" class="price">NOS TARIFS</a>
+        <a href="#prices" class="price">NOS TARIFS</a>
         <a href="#" class="localisation">NOUS TROUVER</a>
       </div>
       <div class="hero-animation">
@@ -99,9 +99,76 @@
       </div>
     </div>
     <div id="prices">
-      <h2>Prices</h2>
+      <h2 class="prices-title">TARIFS <span class="prices-chart">(liste non exhaustive, hors options)*</span></h2>
+      <div class="group-prices">
+        <h5>Mariages</h5>
+        <div class="prices-content">
+          <h6>Réception <span>à partir de 100 personnes</span></h6>
+          <p><bold>€</bold>800</p>
+        </div>
+        <div class="prices-content">
+          <h6>Sonorisation du cocktail <span>+ Micro</span></h6>
+          <p><bold>€</bold>100</p>
+        </div>
+        <div class="prices-content">
+          <h6>Eclairage de la salle à LED <span>hors sono</span></h6>
+          <p><bold>€</bold>250</p>
+        </div>
+        <div class="prices-content">
+          <h6>Vidéo: 1 écran + 1 vidéo-projecteur <span></span></h6>
+          <p><bold>€</bold>150</p>
+        </div>
+        <div class="prices-content">
+          <h6>Pack feu d'artifice <span>de 2 à 3 minutes</span></h6>
+          <p><bold>€</bold>150</p>
+        </div>
+        <div class="prices-content">
+          <h6>Machine à bulles <span>avec 1L de produit</span></h6>
+          <p><bold>€</bold>150</p>
+        </div>
+      </div>
+      <div class="group-prices">
+        <h5>Karaoke</h5>
+        <div class="prices-content">
+          <h6>Vidéo: 1 écran + 1 vidéo-projecteur <span></span></h6>
+          <p><bold>€</bold>150</p>
+        </div>
+        <div class="prices-content">
+          <h6>Animateur/Chanteur <span></span></h6>
+          <p><bold>€</bold>250</p>
+        </div>
+        <div class="prices-content">
+          <h6>Micros supplémentaires <span>+ de 2 micros</span></h6>
+          <p><bold>€</bold>50</p>
+        </div>
+      </div>
+      <div class="group-prices">
+        <h5>Anniversaire</h5>
+        <div class="prices-content">
+          <h6>Machine à confettis <span></span></h6>
+          <p><bold>€</bold>100</p>
+        </div>
+        <div class="prices-content">
+          <h6>Animateur/DJ <span></span></h6>
+          <p><bold>€</bold>250</p>
+        </div>
+        <div class="prices-content">
+          <h6>Micros supplémentaires <span>+ de 2 micros</span></h6>
+          <p><bold>€</bold>50</p>
+        </div>
+      </div>
     </div>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="footer-section-1">
+      <div class="footer-1-content">
+        <h2>P A & E</h2>
+        <h3>Adresse</h3>
+        <p>21 Rue de la musique LYON</p>
+      </div>
+      <div class="map"></div>
+    </div>
+    <div class="footer-section-2"></div>
+  </footer>
 </body>
 </html>
