minor heigth/width improvement

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <h3>Adresse</h3>
         <p>21 Rue de la musique LYON</p>
       </div>
-      <div id='map' style='width: 45%; height: 500px;'></div>
+      <div id='map' style='width: 40%; height: 70%;'></div>
     </div>
     <div class="footer-section-2"></div>
   </footer>
