--- a/index.html
+++ b/index.html
@@ -170,8 +170,16 @@
         <p>21 Rue de la musique LYON</p>
       </div>
       <div id='map' style='width: 40%; height: 70%;'></div>
+      <a class="footer-btn" href="#"><i class="fas fa-angle-double-up"></i></a>
     </div>
-    <div class="footer-section-2"></div>
+    <div class="footer-section-2">
+      <div class="footer-social">
+        <a href="https://fr-fr.facebook.com/" target="blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/?lang=fr" target="blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/?hl=fr" target="blank"><i class="fab fa-instagram"></i></a>
+      </div>
+      <p class="footer-2-content">landing page demo - showroom purpose only</p>
+    </div>
   </footer>
 </body>
 </html>
