minor  html/CSS adjustement

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   <main class="main">
     <div class="hero-banner">
       <h3 class="hero-para-1">P A & E</h3>
-      <h1 class="hero-title">
+      <div class="hero-title">
         <span class="hero-span">P</span>RO 
         <span class="hero-span">A</span>NIMATION 
         <span class="hero-span">&</span>
         <span class="hero-span">E</span>VENEMENTIEL.
-      </h1>
+      </div>
       <h3 class="hero-para-2">Le prestataire de vos soirées</h3>
       <div class="hero-buttons">
         <a href="#prices" class="price">NOS TARIFS</a>
@@ -104,7 +104,7 @@
     <div id="prices">
       <h2 class="prices-title">TARIFS <span class="prices-chart">(liste non exhaustive, hors options)*</span></h2>
       <div class="group-prices">
-        <h5>Mariages</h5>
+        <h5>Mariage</h5>
         <div class="prices-content">
           <h6>Réception <span>à partir de 100 personnes</span></h6>
           <p><bold>€</bold>800</p>
