opacity animation JS added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </header>
   <main class="main">
-    <div class="hero-banner">
+    <div class="hero-banner reveal">
       <h3 class="hero-para-1">P A & E</h3>
       <div class="hero-title">
         <span class="hero-span">P</span>RO 
@@ -49,7 +49,7 @@
         <img src="./images/cloud2-copy.png" class="hero-img-5" alt="cloud">
       </div>
     </div>
-    <div id="about-us" class="about-us">
+    <div id="about-us" class="about-us reveal">
       <img class="about-img" src="https://images.pexels.com/photos/2470088/pexels-photo-2470088.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="club">
       <div class="about-para">
         <p><span style="font-weight: bold;">P A & E</span> c’est votre prestataire pour votre événement d’entreprise, 
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="cards">
-      <div class="card">
+      <div class="card reveal">
         <h3>Animation Musicales</h3>
         <p>
           Pas de soirée sans musique et, surtout pas de bonnes soirées sans un bon DJ. 
@@ -74,7 +74,7 @@
           Open forma ou spécialisés nos Dj’s sauront parfaitement s’adapter à vos demandes.
         </p>
       </div>
-      <div class="card">
+      <div class="card reveal">
         <h3>Animation Micro</h3>
         <p>
           Vous recherchez une animation musicale de qualité originale, 
@@ -85,7 +85,7 @@
           Avec un seul objectif, marquer les esprits.
         </p>
       </div>
-      <div class="card">
+      <div class="card reveal">
         <h3>Concept d'animation</h3>
         <p><span style="font-weight: bold;">P A & E</span> vous propose un service de location de matériel en ligne , 
           avec livraison ou en retrait magasin. Location de matériel de sonorisation,  
@@ -95,7 +95,7 @@
         </p>
       </div>
     </div>
-    <div class="wedding-pic">
+    <div class="wedding-pic reveal">
       <div class="wedding-quotes">
         <h2>Depuis 2007, P A & E c’est + de 2800 animations réalisées …</h2>
         <h4>Dj party, animation musicale d’événement, animation micro commerciale, speaker sportif...</h4>
@@ -103,7 +103,7 @@
     </div>
     <div id="prices">
       <h2 class="prices-title">TARIFS <span class="prices-chart">(liste non exhaustive, hors options)*</span></h2>
-      <div class="group-prices">
+      <div class="group-prices reveal">
         <h5>Mariage</h5>
         <div class="prices-content">
           <h6>Réception <span>à partir de 100 personnes</span></h6>
@@ -130,7 +130,7 @@
           <p><bold>€</bold>150</p>
         </div>
       </div>
-      <div class="group-prices">
+      <div class="group-prices reveal">
         <h5>Karaoke</h5>
         <div class="prices-content">
           <h6>Vidéo: 1 écran + 1 vidéo-projecteur <span></span></h6>
@@ -145,7 +145,7 @@
           <p><bold>€</bold>50</p>
         </div>
       </div>
-      <div class="group-prices">
+      <div class="group-prices reveal">
         <h5>Anniversaire</h5>
         <div class="prices-content">
           <h6>Machine à confettis <span></span></h6>
@@ -162,7 +162,7 @@
       </div>
     </div>
   </main>
-  <footer id="footer">
+  <footer id="footer reveal">
     <div class="footer-section-1">
       <div class="footer-1-content">
         <h2>P A & E</h2>
