js topbar animation + workin' on scroll button animation

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
   <header class="header" id="top">
-    <div class="topbar">
+    <div class="topbar topbar-state-1">
       <h1 class="logo"><a href="/">P A & E</a></h1>
       <ul class="topbar-list">
-        <li class="topbar-item"><a href="#top">HOME</a></li>
+        <li class="topbar-item"><a class="scroll-home" href="#top">HOME</a></li>
         <p>•</p>
-        <li class="topbar-item topbar-active"><a href="#about-us">QUI SOMMES-NOUS</a></li>
+        <li class="topbar-item topbar-active"><a class="scroll-about-us" href="#about-us">QUI SOMMES-NOUS</a></li>
         <p>•</p>
-        <li class="topbar-item"><a href="#prices">PRIX</a></li>
+        <li class="topbar-item"><a class="scroll-prices" href="#prices">PRIX</a></li>
         <p>•</p>
-        <li class="topbar-item"><a href="#footer">LOCALISATION</a></li>
+        <li class="topbar-item"><a class="scroll-footer" href="#footer">LOCALISATION</a></li>
       </ul>
     </div>
   </header>
