starting media queries for responsive

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <h3>Adresse</h3>
         <p>21 Rue de la musique LYON</p>
       </div>
-      <div id='map' style='width: 40%; height: 70%;'></div>
+      <div id='map'></div>
       <a class="footer-btn" href="#top"><i class="fas fa-angle-double-up"></i></a>
     </div>
     <div class="footer-section-2">
