media queries raw ok

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header class="header" id="top">
     <div class="topbar topbar-state-1">
-      <h1 class="logo"><a href="/">P A & E</a></h1>
+      <h1 class="logo"><a href="/landing-page-demo">P A & E</a></h1>
       <ul class="topbar-list">
         <li class="topbar-item"><a class="scroll-home" href="#top">HOME</a></li>
         <p>•</p>
