--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="topbar topbar-state-1">
       <h1 class="logo"><a href="/landing-page-demo">P A & E</a></h1>
       <ul class="topbar-list">
-        <li class="topbar-item"><a class="scroll-home" href="#top">HOME</a></li>
+        <li class="topbar-item"><a class="scroll-home" href="#">HOME</a></li>
         <p>•</p>
-        <li class="topbar-item topbar-active"><a class="scroll-about-us" href="#about-us">QUI SOMMES-NOUS</a></li>
+        <li class="topbar-item topbar-active"><a class="scroll-about-us" href="#">QUI SOMMES-NOUS</a></li>
         <p>•</p>
-        <li class="topbar-item"><a class="scroll-prices" href="#prices">PRIX</a></li>
+        <li class="topbar-item"><a class="scroll-prices" href="#">PRIX</a></li>
         <p>•</p>
-        <li class="topbar-item"><a class="scroll-footer" href="#footer">LOCALISATION</a></li>
+        <li class="topbar-item"><a class="scroll-footer" href="#">LOCALISATION</a></li>
       </ul>
     </div>
   </header>
@@ -38,8 +38,8 @@
       </div>
       <h3 class="hero-para-2 reveal-3">Le prestataire de vos soirées</h3>
       <div class="hero-buttons reveal-4">
-        <a href="#prices" class="price">NOS TARIFS</a>
-        <a href="#footer" class="localisation">NOUS TROUVER</a>
+        <a href="#" class="price">NOS TARIFS</a>
+        <a href="#" class="localisation">NOUS TROUVER</a>
       </div>
       <div class="hero-animation reveal-3">
         <img src="./images/cloud1-copy.png" class="hero-img-1" alt="cloud">
@@ -170,7 +170,7 @@
         <p>21 Rue de la musique LYON</p>
       </div>
       <div id='map'></div>
-      <a class="footer-btn" href="#top"><i class="fas fa-angle-double-up"></i></a>
+      <a class="footer-btn" href="#"><i class="fas fa-angle-double-up"></i></a>
     </div>
     <div class="footer-section-2">
       <div class="footer-social">
